--- a/6-curso-backend-nodejs/curso-backend-nodejs/package.json
+++ b/6-curso-backend-nodejs/curso-backend-nodejs/package.json
@@ -18,5 +18,8 @@
     "express": "^4.21.2",
     "nodemon": "^2.0.12",
     "prettier": "^2.3.2"
+  },
+  "dependencies": {
+    "@faker-js/faker": "^9.5.0"
   }
 }
